--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "gh-pages": "^1.1.0",
+    "lodash.template": "^4.5.0",
     "react": "^16.3.2",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -19,5 +20,17 @@
     "eject": "react-scripts eject",
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
